--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@inkline/inkline": "^4.1.0-0",
     "@inkline/plugin": "^1.5.2",
+    "libphonenumber-js": "^1.11.18",
     "vue3-carousel-nuxt": "^1.1.0"
   }
 }
